@@ -1,18 +1,14 @@
-# == Class: dhcp
-#
 # This class provides an input selector for configuring the DHCP
 # server or client.
 #
 # The client portion has not yet been implemented.
 #
-# Authors
-#
-# * Trevor Vaughan <tvaughan@onyxpoint.com>
+# @author https://github.com/simp/pupmod-simp-dhcp/graphs/contributors
 #
 class dhcp (
   Boolean $is_client = false,
   Boolean $is_server = true
-){
+) {
   if $is_client {
     notify { 'dhcp::client is not yet implemented': }
   }
